blog is partially working

--- a/src/app.css
+++ b/src/app.css
@@ -32,5 +32,9 @@ button {
 	border-radius: 0.25em;
 	padding: 0.1em 0.5em;
 	cursor: pointer;
-	font-family: inherit
+	font-family: inherit;
+}
+
+p {
+	margin-top: 0;
 }
