--- a/src/lib/atkinson-hyperlegible.css
+++ b/src/lib/atkinson-hyperlegible.css
@@ -4,8 +4,7 @@
 	font-style: italic;
 	font-weight: 400;
 	font-display: swap;
-	src: url(https://cdn.matdoes.dev/fonts/atkinson-hyperlegible/latin-ext-italic.woff2)
-		format('woff2');
+	src: url(/fonts/atkinson-hyperlegible/latin-ext-italic.woff2) format('woff2');
 	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
 		U+2C60-2C7F, U+A720-A7FF;
 }
@@ -15,7 +14,7 @@
 	font-style: italic;
 	font-weight: 400;
 	font-display: swap;
-	src: url(https://cdn.matdoes.dev/fonts/atkinson-hyperlegible/latin-italic.woff2) format('woff2');
+	src: url(/fonts/atkinson-hyperlegible/latin-italic.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
 		U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -25,8 +24,7 @@
 	font-style: italic;
 	font-weight: 700;
 	font-display: swap;
-	src: url(https://cdn.matdoes.dev/fonts/atkinson-hyperlegible/latin-ext-italic-bold.woff2)
-		format('woff2');
+	src: url(/fonts/atkinson-hyperlegible/latin-ext-italic-bold.woff2) format('woff2');
 	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
 		U+2C60-2C7F, U+A720-A7FF;
 }
@@ -36,8 +34,7 @@
 	font-style: italic;
 	font-weight: 700;
 	font-display: swap;
-	src: url(https://cdn.matdoes.dev/fonts/atkinson-hyperlegible/latin-italic-bold.woff2)
-		format('woff2');
+	src: url(/fonts/atkinson-hyperlegible/latin-italic-bold.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
 		U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -47,8 +44,7 @@
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url(https://cdn.matdoes.dev/fonts/atkinson-hyperlegible/latin-ext-italic-bold.woff2)
-		format('woff2');
+	src: url(/fonts/atkinson-hyperlegible/latin-ext-italic-bold.woff2) format('woff2');
 	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
 		U+2C60-2C7F, U+A720-A7FF;
 }
@@ -58,7 +54,7 @@
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url(https://cdn.matdoes.dev/fonts/atkinson-hyperlegible/latin.woff2) format('woff2');
+	src: url(/fonts/atkinson-hyperlegible/latin.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
 		U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -68,7 +64,7 @@
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
-	src: url(https://cdn.matdoes.dev/fonts/atkinson-hyperlegible/latin-ext-bold.woff2) format('woff2');
+	src: url(/fonts/atkinson-hyperlegible/latin-ext-bold.woff2) format('woff2');
 	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
 		U+2C60-2C7F, U+A720-A7FF;
 }
@@ -78,7 +74,7 @@
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
-	src: url(https://cdn.matdoes.dev/fonts/atkinson-hyperlegible/latin-bold.woff2) format('woff2');
+	src: url(/fonts/atkinson-hyperlegible/latin-bold.woff2) format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
 		U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
