--- a/src/app.css
+++ b/src/app.css
@@ -19,17 +19,18 @@
 	--text-font: 'Atkinson Hyperlegible';
 }
 
-html {
+html,
+body,
+#page {
 	height: 100%;
 	width: 100%;
+	scroll-behavior: smooth;
 }
 
 body {
 	background-color: var(--background-color);
 	color: var(--text-color);
 	font-family: var(--text-font);
-	width: 100%;
-	height: 100%;
 	margin: 0;
 }
 
