--- a/src/app.css
+++ b/src/app.css
@@ -18,6 +18,7 @@
 
 	--warning-color: #e6b450;
 	--error-color: #d95757;
+	--green: #aad94c;
 
 	--text-font: 'Atkinson Hyperlegible', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 }
