--- a/src/lib/atkinson-hyperlegible.css
+++ b/src/lib/atkinson-hyperlegible.css
@@ -5,8 +5,9 @@
 	font-weight: 400;
 	font-display: swap;
 	src: url($lib/fonts/atkinson-hyperlegible/latin-ext-italic.woff2) format('woff2');
-	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
-		U+2C60-2C7F, U+A720-A7FF;
+	unicode-range:
+		U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
+		U+A720-A7FF;
 }
 /* latin */
 @font-face {
@@ -15,8 +16,9 @@
 	font-weight: 400;
 	font-display: swap;
 	src: url($lib/fonts/atkinson-hyperlegible/latin-italic.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
-		U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+	unicode-range:
+		U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074,
+		U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
 @font-face {
@@ -25,8 +27,9 @@
 	font-weight: 700;
 	font-display: swap;
 	src: url($lib/fonts/atkinson-hyperlegible/latin-ext-italic-bold.woff2) format('woff2');
-	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
-		U+2C60-2C7F, U+A720-A7FF;
+	unicode-range:
+		U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
+		U+A720-A7FF;
 }
 /* latin */
 @font-face {
@@ -35,8 +38,9 @@
 	font-weight: 700;
 	font-display: swap;
 	src: url($lib/fonts/atkinson-hyperlegible/latin-italic-bold.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
-		U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+	unicode-range:
+		U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074,
+		U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
 @font-face {
@@ -44,9 +48,10 @@
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url($lib/fonts/atkinson-hyperlegible/latin-ext-italic-bold.woff2) format('woff2');
-	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
-		U+2C60-2C7F, U+A720-A7FF;
+	src: url($lib/fonts/atkinson-hyperlegible/latin-ext.woff2) format('woff2');
+	unicode-range:
+		U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
+		U+A720-A7FF;
 }
 /* latin */
 @font-face {
@@ -55,8 +60,9 @@
 	font-weight: 400;
 	font-display: swap;
 	src: url($lib/fonts/atkinson-hyperlegible/latin.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
-		U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+	unicode-range:
+		U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074,
+		U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
 @font-face {
@@ -65,8 +71,9 @@
 	font-weight: 700;
 	font-display: swap;
 	src: url($lib/fonts/atkinson-hyperlegible/latin-ext-bold.woff2) format('woff2');
-	unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113,
-		U+2C60-2C7F, U+A720-A7FF;
+	unicode-range:
+		U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F,
+		U+A720-A7FF;
 }
 /* latin */
 @font-face {
@@ -75,6 +82,7 @@
 	font-weight: 700;
 	font-display: swap;
 	src: url($lib/fonts/atkinson-hyperlegible/latin-bold.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F,
-		U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+	unicode-range:
+		U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074,
+		U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
